visitor/src/grammar/BasicParser.cpp

// Generated from BasicParser.g4 by ANTLR 4.8

#include <grammar/BasicParserVisitor.h>

#include <grammar/BasicParser.h>

using namespace antlrcpp;
using namespace ch2c;
using namespace antlr4;

BasicParser::BasicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

BasicParser::~BasicParser() { delete _interpreter; }

std::string BasicParser::getGrammarFileName() const { return "BasicParser.g4"; }

const std::vector<std::string> &BasicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary &BasicParser::getVocabulary() const { return _vocabulary; }

//----------------- FileContext
//------------------------------------------------------------------

BasicParser::FileContext::FileContext(ParserRuleContext *parent,
                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<BasicParser::VarDefContext *> BasicParser::FileContext::varDef() {
  return getRuleContexts<BasicParser::VarDefContext>();
}

BasicParser::VarDefContext *BasicParser::FileContext::varDef(size_t i) {
  return getRuleContext<BasicParser::VarDefContext>(i);
}

std::vector<BasicParser::ExprStmtContext *>
BasicParser::FileContext::exprStmt() {
  return getRuleContexts<BasicParser::ExprStmtContext>();
}

BasicParser::ExprStmtContext *BasicParser::FileContext::exprStmt(size_t i) {
  return getRuleContext<BasicParser::ExprStmtContext>(i);
}

std::vector<BasicParser::FuncDefContext *> BasicParser::FileContext::funcDef() {
  return getRuleContexts<BasicParser::FuncDefContext>();
}

BasicParser::FuncDefContext *BasicParser::FileContext::funcDef(size_t i) {
  return getRuleContext<BasicParser::FuncDefContext>(i);
}

std::vector<BasicParser::ExtFuncDeclContext *>
BasicParser::FileContext::extFuncDecl() {
  return getRuleContexts<BasicParser::ExtFuncDeclContext>();
}

BasicParser::ExtFuncDeclContext *BasicParser::FileContext::extFuncDecl(
    size_t i) {
  return getRuleContext<BasicParser::ExtFuncDeclContext>(i);
}

std::vector<BasicParser::RecDeclContext *> BasicParser::FileContext::recDecl() {
  return getRuleContexts<BasicParser::RecDeclContext>();
}

BasicParser::RecDeclContext *BasicParser::FileContext::recDecl(size_t i) {
  return getRuleContext<BasicParser::RecDeclContext>(i);
}

size_t BasicParser::FileContext::getRuleIndex() const {
  return BasicParser::RuleFile;
}

antlrcpp::Any BasicParser::FileContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::FileContext *BasicParser::file() {
  FileContext *_localctx =
      _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, BasicParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (
        (((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << BasicParser::VAR) | (1ULL << BasicParser::PROC) |
           (1ULL << BasicParser::RECORD) | (1ULL << BasicParser::EXTERN) |
           (1ULL << BasicParser::THIS) |
           (1ULL << BasicParser::OPEN_PARENTHESES) |
           (1ULL << BasicParser::IDENTIFIER) |
           (1ULL << BasicParser::STRING_LITERAL) | (1ULL << BasicParser::TRUE) |
           (1ULL << BasicParser::FALSE) | (1ULL << BasicParser::DEC_LITERAL) |
           (1ULL << BasicParser::HEX_LITERAL) |
           (1ULL << BasicParser::OCT_LITERAL) |
           (1ULL << BasicParser::REAL_LITERAL))) != 0)) {
      setState(47);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case BasicParser::VAR: {
          setState(42);
          varDef();
          break;
        }

        case BasicParser::THIS:
        case BasicParser::OPEN_PARENTHESES:
        case BasicParser::IDENTIFIER:
        case BasicParser::STRING_LITERAL:
        case BasicParser::TRUE:
        case BasicParser::FALSE:
        case BasicParser::DEC_LITERAL:
        case BasicParser::HEX_LITERAL:
        case BasicParser::OCT_LITERAL:
        case BasicParser::REAL_LITERAL: {
          setState(43);
          exprStmt();
          break;
        }

        case BasicParser::PROC: {
          setState(44);
          funcDef();
          break;
        }

        case BasicParser::EXTERN: {
          setState(45);
          extFuncDecl();
          break;
        }

        case BasicParser::RECORD: {
          setState(46);
          recDecl();
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext
//------------------------------------------------------------------

BasicParser::StatementsContext::StatementsContext(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

BasicParser::ExprStmtContext *BasicParser::StatementsContext::exprStmt() {
  return getRuleContext<BasicParser::ExprStmtContext>(0);
}

BasicParser::BlckStmtContext *BasicParser::StatementsContext::blckStmt() {
  return getRuleContext<BasicParser::BlckStmtContext>(0);
}

size_t BasicParser::StatementsContext::getRuleIndex() const {
  return BasicParser::RuleStatements;
}

antlrcpp::Any BasicParser::StatementsContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::StatementsContext *BasicParser::statements() {
  StatementsContext *_localctx =
      _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, BasicParser::RuleStatements);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BasicParser::THIS:
      case BasicParser::OPEN_PARENTHESES:
      case BasicParser::IDENTIFIER:
      case BasicParser::STRING_LITERAL:
      case BasicParser::TRUE:
      case BasicParser::FALSE:
      case BasicParser::DEC_LITERAL:
      case BasicParser::HEX_LITERAL:
      case BasicParser::OCT_LITERAL:
      case BasicParser::REAL_LITERAL: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        exprStmt();
        break;
      }

      case BasicParser::OPEN_BRACES: {
        enterOuterAlt(_localctx, 2);
        setState(53);
        blckStmt();
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetStmtContext
//------------------------------------------------------------------

BasicParser::RetStmtContext::RetStmtContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::RetStmtContext::RETURN() {
  return getToken(BasicParser::RETURN, 0);
}

BasicParser::ExprContext *BasicParser::RetStmtContext::expr() {
  return getRuleContext<BasicParser::ExprContext>(0);
}

tree::TerminalNode *BasicParser::RetStmtContext::SEMICOLON() {
  return getToken(BasicParser::SEMICOLON, 0);
}

size_t BasicParser::RetStmtContext::getRuleIndex() const {
  return BasicParser::RuleRetStmt;
}

antlrcpp::Any BasicParser::RetStmtContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitRetStmt(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::RetStmtContext *BasicParser::retStmt() {
  RetStmtContext *_localctx =
      _tracker.createInstance<RetStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, BasicParser::RuleRetStmt);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(BasicParser::RETURN);
    setState(57);
    expr(0);
    setState(58);
    match(BasicParser::SEMICOLON);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlckStmtContext
//------------------------------------------------------------------

BasicParser::BlckStmtContext::BlckStmtContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::BlckStmtContext::OPEN_BRACES() {
  return getToken(BasicParser::OPEN_BRACES, 0);
}

tree::TerminalNode *BasicParser::BlckStmtContext::CLOSE_BRACES() {
  return getToken(BasicParser::CLOSE_BRACES, 0);
}

std::vector<BasicParser::VarDefContext *>
BasicParser::BlckStmtContext::varDef() {
  return getRuleContexts<BasicParser::VarDefContext>();
}

BasicParser::VarDefContext *BasicParser::BlckStmtContext::varDef(size_t i) {
  return getRuleContext<BasicParser::VarDefContext>(i);
}

std::vector<BasicParser::ExprStmtContext *>
BasicParser::BlckStmtContext::exprStmt() {
  return getRuleContexts<BasicParser::ExprStmtContext>();
}

BasicParser::ExprStmtContext *BasicParser::BlckStmtContext::exprStmt(size_t i) {
  return getRuleContext<BasicParser::ExprStmtContext>(i);
}

std::vector<BasicParser::RetStmtContext *>
BasicParser::BlckStmtContext::retStmt() {
  return getRuleContexts<BasicParser::RetStmtContext>();
}

BasicParser::RetStmtContext *BasicParser::BlckStmtContext::retStmt(size_t i) {
  return getRuleContext<BasicParser::RetStmtContext>(i);
}

size_t BasicParser::BlckStmtContext::getRuleIndex() const {
  return BasicParser::RuleBlckStmt;
}

antlrcpp::Any BasicParser::BlckStmtContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitBlckStmt(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::BlckStmtContext *BasicParser::blckStmt() {
  BlckStmtContext *_localctx =
      _tracker.createInstance<BlckStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, BasicParser::RuleBlckStmt);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(BasicParser::OPEN_BRACES);
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (
        (((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << BasicParser::VAR) | (1ULL << BasicParser::RETURN) |
           (1ULL << BasicParser::THIS) |
           (1ULL << BasicParser::OPEN_PARENTHESES) |
           (1ULL << BasicParser::IDENTIFIER) |
           (1ULL << BasicParser::STRING_LITERAL) | (1ULL << BasicParser::TRUE) |
           (1ULL << BasicParser::FALSE) | (1ULL << BasicParser::DEC_LITERAL) |
           (1ULL << BasicParser::HEX_LITERAL) |
           (1ULL << BasicParser::OCT_LITERAL) |
           (1ULL << BasicParser::REAL_LITERAL))) != 0)) {
      setState(64);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case BasicParser::VAR: {
          setState(61);
          varDef();
          break;
        }

        case BasicParser::THIS:
        case BasicParser::OPEN_PARENTHESES:
        case BasicParser::IDENTIFIER:
        case BasicParser::STRING_LITERAL:
        case BasicParser::TRUE:
        case BasicParser::FALSE:
        case BasicParser::DEC_LITERAL:
        case BasicParser::HEX_LITERAL:
        case BasicParser::OCT_LITERAL:
        case BasicParser::REAL_LITERAL: {
          setState(62);
          exprStmt();
          break;
        }

        case BasicParser::RETURN: {
          setState(63);
          retStmt();
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(69);
    match(BasicParser::CLOSE_BRACES);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprStmtContext
//------------------------------------------------------------------

BasicParser::ExprStmtContext::ExprStmtContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

BasicParser::ExprContext *BasicParser::ExprStmtContext::expr() {
  return getRuleContext<BasicParser::ExprContext>(0);
}

tree::TerminalNode *BasicParser::ExprStmtContext::SEMICOLON() {
  return getToken(BasicParser::SEMICOLON, 0);
}

size_t BasicParser::ExprStmtContext::getRuleIndex() const {
  return BasicParser::RuleExprStmt;
}

antlrcpp::Any BasicParser::ExprStmtContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::ExprStmtContext *BasicParser::exprStmt() {
  ExprStmtContext *_localctx =
      _tracker.createInstance<ExprStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, BasicParser::RuleExprStmt);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    expr(0);
    setState(72);
    match(BasicParser::SEMICOLON);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimTypesContext
//------------------------------------------------------------------

BasicParser::PrimTypesContext::PrimTypesContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::PrimTypesContext::INT() {
  return getToken(BasicParser::INT, 0);
}

tree::TerminalNode *BasicParser::PrimTypesContext::UINT() {
  return getToken(BasicParser::UINT, 0);
}

tree::TerminalNode *BasicParser::PrimTypesContext::REAL() {
  return getToken(BasicParser::REAL, 0);
}

tree::TerminalNode *BasicParser::PrimTypesContext::STRING() {
  return getToken(BasicParser::STRING, 0);
}

tree::TerminalNode *BasicParser::PrimTypesContext::BOOL() {
  return getToken(BasicParser::BOOL, 0);
}

size_t BasicParser::PrimTypesContext::getRuleIndex() const {
  return BasicParser::RulePrimTypes;
}

antlrcpp::Any BasicParser::PrimTypesContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitPrimTypes(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::PrimTypesContext *BasicParser::primTypes() {
  PrimTypesContext *_localctx =
      _tracker.createInstance<PrimTypesContext>(_ctx, getState());
  enterRule(_localctx, 10, BasicParser::RulePrimTypes);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _la = _input->LA(1);
    if (!((((_la & ~0x3fULL) == 0) &&
           ((1ULL << _la) &
            ((1ULL << BasicParser::INT) | (1ULL << BasicParser::UINT) |
             (1ULL << BasicParser::STRING) | (1ULL << BasicParser::REAL) |
             (1ULL << BasicParser::BOOL))) != 0))) {
      _errHandler->recoverInline(this);
    } else {
      _errHandler->reportMatch(this);
      consume();
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarTypeContext
//------------------------------------------------------------------

BasicParser::VarTypeContext::VarTypeContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::VarTypeContext::IDENTIFIER() {
  return getToken(BasicParser::IDENTIFIER, 0);
}

BasicParser::PrimTypesContext *BasicParser::VarTypeContext::primTypes() {
  return getRuleContext<BasicParser::PrimTypesContext>(0);
}

size_t BasicParser::VarTypeContext::getRuleIndex() const {
  return BasicParser::RuleVarType;
}

antlrcpp::Any BasicParser::VarTypeContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitVarType(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::VarTypeContext *BasicParser::varType() {
  VarTypeContext *_localctx =
      _tracker.createInstance<VarTypeContext>(_ctx, getState());
  enterRule(_localctx, 12, BasicParser::RuleVarType);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BasicParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        match(BasicParser::IDENTIFIER);
        break;
      }

      case BasicParser::INT:
      case BasicParser::UINT:
      case BasicParser::STRING:
      case BasicParser::REAL:
      case BasicParser::BOOL: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        primTypes();
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclContext
//------------------------------------------------------------------

BasicParser::TypeDeclContext::TypeDeclContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::TypeDeclContext::COLON() {
  return getToken(BasicParser::COLON, 0);
}

BasicParser::VarTypeContext *BasicParser::TypeDeclContext::varType() {
  return getRuleContext<BasicParser::VarTypeContext>(0);
}

size_t BasicParser::TypeDeclContext::getRuleIndex() const {
  return BasicParser::RuleTypeDecl;
}

antlrcpp::Any BasicParser::TypeDeclContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitTypeDecl(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::TypeDeclContext *BasicParser::typeDecl() {
  TypeDeclContext *_localctx =
      _tracker.createInstance<TypeDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, BasicParser::RuleTypeDecl);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(BasicParser::COLON);
    setState(81);
    varType();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext
//------------------------------------------------------------------

BasicParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> BasicParser::VarDeclContext::IDENTIFIER() {
  return getTokens(BasicParser::IDENTIFIER);
}

tree::TerminalNode *BasicParser::VarDeclContext::IDENTIFIER(size_t i) {
  return getToken(BasicParser::IDENTIFIER, i);
}

BasicParser::TypeDeclContext *BasicParser::VarDeclContext::typeDecl() {
  return getRuleContext<BasicParser::TypeDeclContext>(0);
}

tree::TerminalNode *BasicParser::VarDeclContext::ASSIGN() {
  return getToken(BasicParser::ASSIGN, 0);
}

BasicParser::ExprContext *BasicParser::VarDeclContext::expr() {
  return getRuleContext<BasicParser::ExprContext>(0);
}

std::vector<tree::TerminalNode *> BasicParser::VarDeclContext::COMMA() {
  return getTokens(BasicParser::COMMA);
}

tree::TerminalNode *BasicParser::VarDeclContext::COMMA(size_t i) {
  return getToken(BasicParser::COMMA, i);
}

size_t BasicParser::VarDeclContext::getRuleIndex() const {
  return BasicParser::RuleVarDecl;
}

antlrcpp::Any BasicParser::VarDeclContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::VarDeclContext *BasicParser::varDecl() {
  VarDeclContext *_localctx =
      _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, BasicParser::RuleVarDecl);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(BasicParser::IDENTIFIER);
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BasicParser::COMMA) {
      setState(84);
      match(BasicParser::COMMA);
      setState(85);
      match(BasicParser::IDENTIFIER);
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 8, _ctx)) {
      case 1: {
        setState(91);
        typeDecl();
        break;
      }

      case 2: {
        setState(93);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == BasicParser::COLON) {
          setState(92);
          typeDecl();
        }
        setState(95);
        match(BasicParser::ASSIGN);
        setState(96);
        expr(0);
        break;
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext
//------------------------------------------------------------------

BasicParser::VarDefContext::VarDefContext(ParserRuleContext *parent,
                                          size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::VarDefContext::VAR() {
  return getToken(BasicParser::VAR, 0);
}

std::vector<BasicParser::VarDeclContext *>
BasicParser::VarDefContext::varDecl() {
  return getRuleContexts<BasicParser::VarDeclContext>();
}

BasicParser::VarDeclContext *BasicParser::VarDefContext::varDecl(size_t i) {
  return getRuleContext<BasicParser::VarDeclContext>(i);
}

tree::TerminalNode *BasicParser::VarDefContext::SEMICOLON() {
  return getToken(BasicParser::SEMICOLON, 0);
}

tree::TerminalNode *BasicParser::VarDefContext::COMMA() {
  return getToken(BasicParser::COMMA, 0);
}

size_t BasicParser::VarDefContext::getRuleIndex() const {
  return BasicParser::RuleVarDef;
}

antlrcpp::Any BasicParser::VarDefContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitVarDef(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::VarDefContext *BasicParser::varDef() {
  VarDefContext *_localctx =
      _tracker.createInstance<VarDefContext>(_ctx, getState());
  enterRule(_localctx, 18, BasicParser::RuleVarDef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(BasicParser::VAR);
    setState(100);
    varDecl();
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BasicParser::COMMA) {
      setState(101);
      match(BasicParser::COMMA);
      setState(102);
      varDecl();
    }
    setState(105);
    match(BasicParser::SEMICOLON);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarParamContext
//------------------------------------------------------------------

BasicParser::VarParamContext::VarParamContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::VarParamContext::IDENTIFIER() {
  return getToken(BasicParser::IDENTIFIER, 0);
}

BasicParser::TypeDeclContext *BasicParser::VarParamContext::typeDecl() {
  return getRuleContext<BasicParser::TypeDeclContext>(0);
}

size_t BasicParser::VarParamContext::getRuleIndex() const {
  return BasicParser::RuleVarParam;
}

antlrcpp::Any BasicParser::VarParamContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitVarParam(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::VarParamContext *BasicParser::varParam() {
  VarParamContext *_localctx =
      _tracker.createInstance<VarParamContext>(_ctx, getState());
  enterRule(_localctx, 20, BasicParser::RuleVarParam);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(BasicParser::IDENTIFIER);
    setState(108);
    typeDecl();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgListContext
//------------------------------------------------------------------

BasicParser::ArgListContext::ArgListContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<BasicParser::VarParamContext *>
BasicParser::ArgListContext::varParam() {
  return getRuleContexts<BasicParser::VarParamContext>();
}

BasicParser::VarParamContext *BasicParser::ArgListContext::varParam(size_t i) {
  return getRuleContext<BasicParser::VarParamContext>(i);
}

std::vector<tree::TerminalNode *> BasicParser::ArgListContext::COMMA() {
  return getTokens(BasicParser::COMMA);
}

tree::TerminalNode *BasicParser::ArgListContext::COMMA(size_t i) {
  return getToken(BasicParser::COMMA, i);
}

size_t BasicParser::ArgListContext::getRuleIndex() const {
  return BasicParser::RuleArgList;
}

antlrcpp::Any BasicParser::ArgListContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitArgList(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::ArgListContext *BasicParser::argList() {
  ArgListContext *_localctx =
      _tracker.createInstance<ArgListContext>(_ctx, getState());
  enterRule(_localctx, 22, BasicParser::RuleArgList);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    varParam();
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BasicParser::COMMA) {
      setState(111);
      match(BasicParser::COMMA);
      setState(112);
      varParam();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RecDeclContext
//------------------------------------------------------------------

BasicParser::RecDeclContext::RecDeclContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *BasicParser::RecDeclContext::RECORD() {
  return getToken(BasicParser::RECORD, 0);
}

tree::TerminalNode *BasicParser::RecDeclContext::IDENTIFIER() {
  return getToken(BasicParser::IDENTIFIER, 0);
}

tree::TerminalNode *BasicParser::RecDeclContext::OPEN_BRACES() {
  return getToken(BasicParser::OPEN_BRACES, 0);
}

tree::TerminalNode *BasicParser::RecDeclContext::CLOSE_BRACES() {
  return getToken(BasicParser::CLOSE_BRACES, 0);
}

std::vector<tree::TerminalNode *> BasicParser::RecDeclContext::VAR() {
  return getTokens(BasicParser::VAR);
}

tree::TerminalNode *BasicParser::RecDeclContext::VAR(size_t i) {
  return getToken(BasicParser::VAR, i);
}

std::vector<BasicParser::VarParamContext *>
BasicParser::RecDeclContext::varParam() {
  return getRuleContexts<BasicParser::VarParamContext>();
}

BasicParser::VarParamContext *BasicParser::RecDeclContext::varParam(size_t i) {
  return getRuleContext<BasicParser::VarParamContext>(i);
}

std::vector<tree::TerminalNode *> BasicParser::RecDeclContext::SEMICOLON() {
  return getTokens(BasicParser::SEMICOLON);
}

tree::TerminalNode *BasicParser::RecDeclContext::SEMICOLON(size_t i) {
  return getToken(BasicParser::SEMICOLON, i);
}

std::vector<BasicParser::FuncDefContext *>
BasicParser::RecDeclContext::funcDef() {
  return getRuleContexts<BasicParser::FuncDefContext>();
}

BasicParser::FuncDefContext *BasicParser::RecDeclContext::funcDef(size_t i) {
  return getRuleContext<BasicParser::FuncDefContext>(i);
}

size_t BasicParser::RecDeclContext::getRuleIndex() const {
  return BasicParser::RuleRecDecl;
}

antlrcpp::Any BasicParser::RecDeclContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicParserVisitor *>(visitor))
    return parserVisitor->visitRecDecl(this);
  else
    return visitor->visitChildren(this);
}
